Rename file to unhidden file. Adding mouse mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,7 +46,8 @@ set -g word-separators " -_@"
 #[NO RENAME OPTION]
 set-window-option -g automatic-rename off
 
-
+#[MOUSE MODE ON]
+setw -g mouse on
 #[BINDS]
 
 #[SWITCH PANES W/ ALT+ARROWS]
