--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,6 +57,12 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 
+#[Use Alt-vim keys without prefix key to switch panes}
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
 #[SHIFT+ARROW TO SWITCH WINDOWS]
 bind -n S-Left  previous-window
 bind -n S-Right next-window
