Changing background and foreground color of status bar when synchronizing panes command lines

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,7 +36,7 @@ set -g status-position bottom
 set -g status-right " "#{=21:pane_title}" %H:%M %d-%b-%y"
 set -g status-right-length 40
 set -g status-right-style default
-set -g status-style fg=black,bg=green
+#set -g status-style fg=black,bg=green
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set -g visual-activity off
 set -g visual-bell off
@@ -45,6 +45,7 @@ set -g word-separators " -_@"
 
 #[NO RENAME OPTION]
 set-window-option -g automatic-rename off
+set -g allow-rename off
 
 #[MOUSE MODE ON]
 setw -g mouse on
@@ -69,11 +70,11 @@ bind -n S-Right next-window
 
 #[SYNC PANES]
 bind -n C-x setw synchronize-panes on \; set-window-option status-bg red \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option status-bg green \; display-message "Panes un-synchronized."
+bind -n M-x setw synchronize-panes off \; set-window-option status-bg black \; display-message "Panes un-synchronized."
 
 #[THEME]
-set -g status-bg green
-set -g status-fg black
+set -g status-bg black
+set -g status-fg white
 set -g window-status-current-bg white
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
