Synchronzing pane status color only appear on the current tab

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,7 +32,7 @@ set -g status-keys emacs
 set -g status-left "[#S] "
 set -g status-left-length 10
 set -g status-left-style default
-set -g status-position bottom
+set -g status-position top
 set -g status-right " "#{=21:pane_title}" %H:%M %d-%b-%y"
 set -g status-right-length 40
 set -g status-right-style default
@@ -59,24 +59,25 @@ bind -n M-Down select-pane -D
 
 
 #[Use Alt-vim keys without prefix key to switch panes}
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+#bind -n M-h select-pane -L
+#bind -n M-j select-pane -D 
+#bind -n M-k select-pane -U
+#bind -n M-l select-pane -R
 
 #[SHIFT+ARROW TO SWITCH WINDOWS]
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 #[SYNC PANES]
-bind -n C-x setw synchronize-panes on \; set-window-option status-bg red \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option status-bg black \; display-message "Panes un-synchronized."
+#bind -n C-x setw synchronize-panes on \; set-window-option status-bg red \; display-message "Panes synchronized."
+bind -n C-x setw synchronize-panes on \; set-window-option window-status-fg red \; set-window-option window-status-current-bg white \; display-message "Panes synchronized."
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-fg green \; display-message "Panes un-synchronized."
 
 #[THEME]
 set -g status-bg black
-set -g status-fg white
+set -g status-fg green
 set -g window-status-current-bg white
-set -g window-status-current-fg black
+set -g window-status-current-fg green
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
