Cosmetic change. Switching current-status from green to black.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,13 +71,13 @@ bind -n S-Right next-window
 #[SYNC PANES]
 #bind -n C-x setw synchronize-panes on \; set-window-option status-bg red \; display-message "Panes synchronized."
 bind -n C-x setw synchronize-panes on \; set-window-option window-status-fg red \; set-window-option window-status-current-bg white \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option window-status-fg green \; display-message "Panes un-synchronized."
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-fg green \; set-window-option window-status-current-fg black \; display-message "Panes un-synchronized."
 
 #[THEME]
 set -g status-bg black
 set -g status-fg green
 set -g window-status-current-bg white
-set -g window-status-current-fg green
+set -g window-status-current-fg black
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
