--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,7 +57,6 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-
 #[Use Alt-vim keys without prefix key to switch panes}
 #bind -n M-h select-pane -L
 #bind -n M-j select-pane -D 
@@ -69,9 +68,18 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 #[SYNC PANES]
-#bind -n C-x setw synchronize-panes on \; set-window-option status-bg red \; display-message "Panes synchronized."
-bind -n C-x setw synchronize-panes on \; set-window-option window-status-fg red \; set-window-option window-status-current-bg white \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option window-status-fg green \; set-window-option window-status-current-fg black \; display-message "Panes un-synchronized."
+bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-fg red \; set-window-option window-status-fg red \; set-window-option window-status-current-bg white \; display-message "Panes synchronized."
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-fg black \; set-window-option window-status-fg green \; set-window-option window-status-current-bg white \; display-message "Panes unsynchronized."
+
+#[JOIN PANE]
+#bind-key j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
+#bind-key s command-prompt -p "send pane to:"  "join-pane -t ':%%'"
+bind -n C-j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
+bind -n C-s command-prompt -p "send pane to:"  "join-pane -t ':%%'"
+
+#[MOVE PANE : option -n w/ bind uses key combination]
+#bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
+bind -n C-m command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+m
 
 #[THEME]
 set -g status-bg black
@@ -81,5 +89,5 @@ set -g window-status-current-fg black
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
-#set -g status-left '#[fg=red](#S) #(whoami)'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+
