Changing shortcut for move-window : switched from m to w.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,7 +79,7 @@ bind -n C-s command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 
 #[MOVE PANE : option -n w/ bind uses key combination]
 #bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
-bind -n C-m command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+m
+bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
 
 #[THEME]
 set -g status-bg black
