Adding mouse control and enabling ctrl+m shortcut to move panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -g assume-paste-time 1
 set -g base-index 0
 set -g bell-action any
-set -g bell-on-alert off
+#set -g bell-on-alert off
 set -g default-command ""
 set -g default-shell "/bin/bash"
 set -g destroy-unattached off
@@ -17,12 +17,12 @@ set -g lock-after-time 0
 set -g lock-command "lock -np"
 set -g message-command-style fg=yellow,bg=black
 set -g message-style fg=black,bg=yellow
-set -g mouse off
+set -g mouse on
 set -g prefix C-b
 set -g prefix2 None
 set -g renumber-windows off
 set -g repeat-time 500
-set -g set-remain-on-exit off
+#set -g set-remain-on-exit off
 set -g set-titles off
 set -g set-titles-string "#S:#I:#W - "#T" #{session_alerts}"
 set -g status on
@@ -78,8 +78,8 @@ bind -n C-j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
 bind -n C-s command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 
 #[MOVE PANE : option -n w/ bind uses key combination]
-#bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
-bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
+bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
+#bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
 
 #[THEME]
 set -g status-bg black
