--- a/tmux/3.1/tmux.conf
+++ b/tmux/3.1/tmux.conf
@@ -51,6 +51,9 @@ set -g allow-rename off
 setw -g mouse on
 #[BINDS]
 
+#[SPLIT PANES]
+bind \' split-window -v
+bind \\ split-window -h
 #[SWITCH PANES W/ ALT+ARROWS]
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
