--- a/tmux/ant-3.1/tmux.conf
+++ b/tmux/ant-3.1/tmux.conf
@@ -82,8 +82,8 @@ bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
 #bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
 
 #[THEME]
-set -g status-bg black
-set -g status-fg green
+set -g status-bg cyan
+set -g status-fg black
 set -g window-status-current-bg white
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
