Setting new bind horizontal/vertival pane split

--- a/tmux/3.1/tmux.conf
+++ b/tmux/3.1/tmux.conf
@@ -52,8 +52,8 @@ setw -g mouse on
 #[BINDS]
 
 #[SPLIT PANES]
-bind \' split-window -v
-bind \\ split-window -h
+bind v split-window -v
+bind h split-window -h
 #[SWITCH PANES W/ ALT+ARROWS]
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
