--- a/tmux/3.1/tmux.conf
+++ b/tmux/3.1/tmux.conf
@@ -4,7 +4,7 @@ set -g base-index 0
 set -g bell-action any
 #set -g bell-on-alert off
 set -g default-command ""
-set -g default-shell "/bin/bash"
+set -g default-shell "/usr/bin/zsh"
 set -g destroy-unattached off
 set -g detach-on-destroy on
 set -g display-panes-active-colour red
@@ -22,6 +22,7 @@ set -g prefix C-b
 set -g prefix2 None
 set -g renumber-windows off
 set -g repeat-time 500
+setw -g mode-keys vi
 #set -g set-remain-on-exit off
 set -g set-titles off
 set -g set-titles-string "#S:#I:#W - "#T" #{session_alerts}"
@@ -60,6 +61,11 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+#[Send copy to system clipboard]
+bind-key -T copy-mode-vi 'Home' send -X start-of-line
+bind-key -T copy-mode-vi 'End' send -X end-of-line
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 #[Use Alt-vim keys without prefix key to switch panes}
 #bind -n M-h select-pane -L
 #bind -n M-j select-pane -D 
@@ -92,5 +98,5 @@ set -g status-fg green
 set -g status-style bg=#33FFC7,fg=black
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=black]%H:%M#[default]'
 
