--- a/tmux/3.1/tmux.conf
+++ b/tmux/3.1/tmux.conf
@@ -65,6 +65,7 @@ bind -n M-Down select-pane -D
 bind-key -T copy-mode-vi 'Home' send -X start-of-line
 bind-key -T copy-mode-vi 'End' send -X end-of-line
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 #[Use Alt-vim keys without prefix key to switch panes}
 #bind -n M-h select-pane -L
