Feature : split pane in the same directory

--- a/tmux/3.1/tmux.conf
+++ b/tmux/3.1/tmux.conf
@@ -53,8 +53,8 @@ setw -g mouse on
 #[BINDS]
 
 #[SPLIT PANES]
-bind v split-window -v
-bind h split-window -h
+bind v split-window -v -c "#{pane_current_path}" 
+bind h split-window -h -c "#{pane_current_path}"
 #[SWITCH PANES W/ ALT+ARROWS]
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
