--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,10 +78,10 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 #[SYNC PANES]
-bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=#33FFC7,fg=#FF0000,underscore \; display-message "Panes synchronized."
-#bind -n C-x setw synchronize-panes on \; set-window-option status-style fg=#FF0000 \; set-window-option status-style fg=#FF0000 \; set-window-option status-style bg=#FF0000 \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=#33FFC7,fg=black \; display-message "Panes unsynchronized."
-#bind -n M-x setw synchronize-panes off \; set-window-option status-style fg=#33FFC7 \; set-window-option window-status-fg green \; set-window-option window-status-current-bg white \; display-message "Panes unsynchronized."
+bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=cyan,fg=red,underscore \; display-message "Panes synchronized."
+#bind -n C-x setw synchronize-panes on \; set-window-option status-style fg=red \; set-window-option status-style fg=red \; set-window-option status-style bg=red \; display-message "Panes synchronized."
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=cyan,fg=black \; display-message "Panes unsynchronized."
+#bind -n M-x setw synchronize-panes off \; set-window-option status-style fg=cyan \; set-window-option window-status-fg green \; set-window-option window-status-current-bg white \; display-message "Panes unsynchronized."
 
 #[JOIN PANE]
 #bind-key j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
@@ -96,7 +96,7 @@ bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
 #[THEME]
 set -g status-bg black
 set -g status-fg green
-set -g status-style bg=#33FFC7,fg=black
+set -g status-style bg=cyan,fg=black
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=black]%H:%M#[default]'
