Adding current command and current path to panes description (bottom)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -94,6 +94,8 @@ bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
 #bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
 
 #[THEME]
+set -g pane-border-status top
+set -g pane-border-format "#P: #{pane_current_command}:#{pane_current_path}"
 set -g status-bg black
 set -g status-fg green
 set -g status-style bg=#33FFC7,fg=black
