--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,10 +24,10 @@ set -g renumber-windows off
 set -g repeat-time 500
 setw -g mode-keys vi
 #set -g set-remain-on-exit off
-set -g set-titles off
+set -g set-titles on
 set -g set-titles-string "#S:#I:#W - "#T" #{session_alerts}"
 set -g status on
-set -g status-interval 15
+set -g status-interval 1
 set -g status-justify left
 set -g status-keys emacs
 set -g status-left "[#S] "
@@ -94,12 +94,19 @@ bind-key m command-prompt -p "move window to:"  "move-window -t ':%%'"
 #bind -n C-w command-prompt -p "move window to:"  "move-window -t ':%%'" #w/ -n hit Ctrl+w
 
 #[THEME]
-set -g pane-border-status top
-set -g pane-border-format "#P: #{pane_current_command}:#{pane_current_path}"
 set -g status-bg black
 set -g status-fg green
 set -g status-style bg=#33FFC7,fg=black
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=black]%H:%M#[default]'
+set -g status-right '#[fg=black]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=black]%H:%M#[default]'
+set -g pane-border-status top
+set -g pane-border-format "#P:#{pane_current_command}:[#U@#H] #{pane_current_path}}"
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @tpm_plugins "                 \
+  tmux-plugins/tpm                    \
+    soyuka/tmux-current-pane-hostname     \
+    "
+run '~/.tmux/plugins/tpm/tpm'
