--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,8 +34,8 @@ set -g status-keys emacs
 set -g status-left "[#S] "
 set -g status-left-length 10
 set -g status-left-style default
-set -g status-position bottom
-set -g status-right " "#{=21:pane_title}" %H:%M %d-%b-%y"
+set -g status-position top
+#set -g status-right " "#{=21:pane_title}" %H:%M %d-%b-%y"
 set -g status-right-length 40
 set -g status-right-style default
 #set -g status-style fg=black,bg=green
@@ -80,9 +80,9 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 #[SYNC PANES]
-bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=#33FFC7,fg=#FF0000,underscore \; display-message "Panes synchronized."\; set -g pane-active-border-style fg=red
+bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=#33FFC7,fg=#FF0000,underscore \; display-message "Panes synchronized."\; set pane-active-border-style fg=red
 #bind -n C-x setw synchronize-panes on \; set-window-option status-style fg=#FF0000 \; set-window-option status-style fg=#FF0000 \; set-window-option status-style bg=#FF0000 \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=#33FFC7,fg=black \; display-message "Panes unsynchronized."\; set -g pane-active-border-style fg=yellow
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=#33FFC7,fg=black \; display-message "Panes unsynchronized."\; set pane-active-border-style fg=yellow
 #bind -n M-x setw synchronize-panes off \; set-window-option status-style fg=#33FFC7 \; set-window-option window-status-fg green \; set-window-option window-status-current-bg white \; display-message "Panes unsynchronized."
 
 #[JOIN PANE]
@@ -103,4 +103,4 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-right '#[fg=black]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=black]%H:%M#[default]'
 set -g pane-border-status top
-set -g pane-border-format "#P:#{pane_current_command}:#{pane_current_path}"
+set -g pane-border-format "#S:#I [#W] - #P | #{pane_current_command} - %H:%M, %d/%m/%y "
