Setting new task bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,8 @@ set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 set -g word-separators " -_@"
-set -g pane-active-border-style fg=yellow
+set -g pane-active-border-style bg=grey
+set -g pane-border-style bg=darkblue
 
 #[NO RENAME OPTION]
 set-window-option -g automatic-rename off
@@ -80,9 +81,9 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 #[SYNC PANES]
-bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=#33FFC7,fg=#FF0000,underscore \; display-message "Panes synchronized."\; set pane-active-border-style fg=red
+bind -n C-x setw synchronize-panes on \; set-window-option window-status-current-style bg=#33FFC7,fg=#FF0000,underscore \; display-message "Panes synchronized."\; set pane-border-style bg=red
 #bind -n C-x setw synchronize-panes on \; set-window-option status-style fg=#FF0000 \; set-window-option status-style fg=#FF0000 \; set-window-option status-style bg=#FF0000 \; display-message "Panes synchronized."
-bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=#33FFC7,fg=black \; display-message "Panes unsynchronized."\; set pane-active-border-style fg=yellow
+bind -n M-x setw synchronize-panes off \; set-window-option window-status-current-style bg=#33FFC7,fg=black \; display-message "Panes unsynchronized."\; set pane-active-border-style bg=grey \; set pane-border-style bg=darkblue
 #bind -n M-x setw synchronize-panes off \; set-window-option status-style fg=#33FFC7 \; set-window-option window-status-fg green \; set-window-option window-status-current-bg white \; display-message "Panes unsynchronized."
 
 #[JOIN PANE]
